<resources>
    <string name="app_name">Khmer Academy</string>

    <!--AppInrol-->
    <string name="AppIntro_Eleaning">E-Learning Video</string>
    <string name="AppIntro_Eleaning_content_1">Khmer Academy គឺជាគេហទំព័រដំបូង ដែលផ្ដល់នូវ E-Learning ជាភាសាខ្មែរ ។ Khmer Academy នឹងផ្ដល់អត្ថប្រយោជន៍ជាច្រើនដល់អ្នក ជាមួយនឹងអត្ថបទមេរៀន ដែលអាចជួយសន្សំពេលវេលា និងថវិកា។ ពួកយើងមាន អត្ថបទ E-Learning ដែលគួរឱ្យចាប់អារម្មណ៍ ជាច្រើនជាភាសាខ្មែរ ដែលអាចនឹងជួយពន្យល់អ្នកយ៉ាងច្បាស់និងងាយស្រួលយល់ ។</string>
    <string name="AppIntro_Eleaning_content_2">Khmer Academy ផ្ដល់ឱ្យអ្នកនូវការសិក្សាជាមួយ Tutorial ជាច្រើនភាសា Programming ។ អ្នកអាចសិក្សាយ៉ាងងាយស្រួល ជាមួយអត្ថបទបង្រៀនជាភាសាខ្មែរ។ ពួកយើងបានរៀបចំ មេរៀនជាប្រភេទនិមួយៗ ជាមួយនឹងមេរៀន សមញ្ញាៗ និង ឧទាហរណ៍ ដែលងាយស្រួលឱ្យអ្នកកាន់តែងាយស្រួលយល់។ សូមចាប់ផ្ដើមឱកាសការងារ និងអនាគតរបស់អ្នកជាមួយ Khmer Academy ។</string>
    <string name="AppIntro_Eleaning_content_3">Khmer Academy forum អនុញ្ញាតឱ្យអ្នកទស្សនា អាចពិភាក្សា និងទំនាក់ទំនងជាមួយគ្នា ដោយការសួរនិងឆ្លើយសំណួរ។ Forum របស់យើងគឺបើកទូលាយគ្រប់អត្ថបទ ជាពិសេសអត្ថបទដែលទាក់ទងនឹង IT ។ ជាមួយនឹងការជួយរបស់អ្នក គឺជាផ្នែកមួយដ៏សំខាន់សម្រាប់យើង ហើយពួកយើងនឹងធ្វើការជាមួយគ្នាដើម្បី កសាងគេហទំព័របណ្ដុំសំណួរនិងចម្លើយ ដ៏ធំនៅកម្ពុជា ។</string>
    <string name="start_learning_today">ការសិក្សា​ចាប់ផ្ដើម​ពី​ថ្ងៃនេះ</string>
    <string name="khmer_academy">KHMER ACADEMY</string>
    <string name="first_elearning">First E-Learning In Cambodia</string>
    <string name="full_name">គោត្តនាម និង​នាម</string>
    <string name="sign_up">ចុះឈ្មោះ</string>
    <string name="log_in">ចូល</string>
    <string name="pass_word">ពាក្យសម្ងាត់</string>
    <string name="confirm_password">បញ្ជាក់ពាក្យសម្ងាត់</string>
    <!--<string name="app_name">KHMERACADEMY</string>-->
    <string name="main_category">MainCategory</string>
    <string name="user_profile">UserProfile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="category_title">Category</string>
    <string name="iso_title">iOS</string>
    <string name="html_title">HTML</string>

    <!--Profile activity-->
    <string name="userPrfile_title">User Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bar_profile">ព័ត៌មានទូទៅ</string>
    <string name="profile_email">អ៊ីម៉ែល:</string>
    <string name="profile_gender">ភេទ:</string>
    <string name="profile_dateofbirth">ថ្ងៃ ខែ ឆ្នាំកំណើត:</string>
    <string name="profile_department">ដេប៉ាតឺម៉ង់:</string>
    <string name="profile_unviersity">គ្រឹះស្ថានសិក្សា:</string>
    <string name="profile_phone_number">លេខទូរស័ព្ទ:</string>
    <!--close Profile activity-->

    <!--Edit Profile activity-->
    <string name="edit_name">គោត្តនាម និងនាម</string>
    <string name="edit_dateOfBirth">ថ្ងៃ ខែ ឆ្នាំកំណើត</string>
    <string name="edit_email">អ៊ីម៉ែល</string>
    <string name="edit_school">គ្រឹះស្ថានសិក្សា</string>
    <string name="edit_department">ដេប៉ាតឺម៉ង់</string>
    <string name="edit_phone">លេខទូរស័ព្ទ:</string>
    <string name="edit_logToPwd">ចូលទៅកែប្រែពាក្យសម្ងាត់</string>

    <string name="hint_edit_name">គោត្តនាម និងនាម</string>
    <string name="hint_edit_dateOfBirth">10 Oct 1995</string>
    <string name="hint_edit_email">email@gmail.com</string>
    <string name="hint_edit_department">ដេប៉ាតឺម៉ង់</string>
    <string name="hint_edit_university">គ្រឹះស្ថានសិក្សា</string>
    <!--Close Edit Profile activity-->

    <!--Navigation Menu Item-->
    <string name="navItemHome">ទំព័រដើម</string>
    <string name="navItemUserProfile">ព័ត៌មានអ្នកប្រើប្រាស់</string>
    <string name="navItemSetting">ការកែប្រែគណនី</string>
    <string name="navItemLogout">ចាកចេញ</string>
    <string name="itemAccount">គណនី</string>
    <string name="navItemAboutUs">អំពីយើង</string>
    <string name="navItemLanguage">ភាសា</string>
    <!--Close Navigation Menu Item-->

    <!--Edit Password-->
    <string name="currentPwd">ពាក្យសម្ងាត់បច្ចុប្បន្ន</string>
    <string name="newPwd">ពាក្យសម្ងាត់ថ្មី</string>
    <string name="confirmPwd">បញ្ចាក់ពាក្យសម្ងាត់ថ្មី</string>
    <string name="editPwd_title">កែប្រែពាក្យសម្ងាត់</string>
    <!--Close Edit Password-->

    <!-- About Us -->
    <string name="about_hrd"> WHO ARE WE?</string>
    <string name="location">OUR LOCATION</string>
    <string name="address_info1">អាស័យដ្ឋាន: #12, ផ្លូវលេខ​ 323, សង្កាត់ បឹងកក់ II,</string>
    <string name="address_info2">ខ័ណ្ឌ ទួលគោក, ភ្នំពេញ, កម្ពុជា</string>
    <string name="tel_info">ទូរស័ព្ទទំនាក់ទំនង: (855)23 99 13 14,</string>
    <string name="tel_info1">(855)77 77 12 36 (ខ្មែរ, អង់គ្លេស)</string>
    <string name="tel_info2">(855)17 52 81 69(កូរ៉េ, អង់គ្លេស)</string>
    <string name="aboutContext">Khmer Academy គឺ​ជា​កម្មវិធី​ ​e-learning​ ​ដំបូង​បង្អស់​សម្រាប់​ចែក​រំលែក \u200Bនូវ\u200Bចំនេះ\u200Bដឹង\u200Bនៅ\u200Bក្នុង\u200Bប្រទេស\u200Bកម្ពុជា\u200B។\u200B e-learning\u200B \u200Bមួយ"\u200Bនេះ\u200Bបាន\u200Bបង្កើត\u200Bឡើង\u200Bដោយ\u200Bមជ្ឈមណ្ឌល\u200B\u200Bកូរ៉េ\u200B សហ្វវែរ\u200B\u200B អេច\u200B\u200B\u200B \u200Bអ\u200B \u200B\u200Bឌី\u200B \u200Bក្នុង\u200Bឆ្នាំ\u200B \u200B2015។\u200B \u200B រាល់\u200Bមេរៀន\u200Bទាំង \u200Bអស់\u200Bត្រូវ\u200Bបាន\u200Bបង្រៀន\u200Bជា\u200Bភាសាខ្មែរ\u200B \u200Bដើម្បី\u200Bផ្តល់\u200Bភាព\u200Bងាយ \u200Bស្រួល\u200Bក្នុង\u200Bការ\u200Bសិក្សា\u200Bស្វែង\u200Bយល់\u200B។\u200B \u200Bមេរៀន\u200Bទាំង\u200Bអស់\u200Bភាគ \u200Bច្រើន\u200Bផ្តោត\u200B\u200Bសំខាន់\u200B\u200Bទៅ\u200Bលើ\u200B \u200Bមុខ\u200Bវិជ្ជា\u200Bព័ត៍មាន\u200Bវិទ្យា\u200B \u200Bហើយ\u200Bយើង\u200Bមាន\u200B\u200Bគម្រោង\u200Bនិង\u200Bពង្រីក\u200Bនូវ\u200Bមុខ\u200B\u200Bវិជ្ជា\u200B​​ \u200Bដទៃ\u200Bទៀត\u200Bឲ្យ\u200Bបាន\u200Bច្រើន\u200B។\u200B \u200Bគោល\u200Bបំណង\u200Bរបស់\u200Bយើង\u200B \u200Bគឺ\u200Bដើម្បី\u200Bធ្វើ\u200Bឲ្យ\u200Bការ\u200Bអប់\u200Bរំ​ ក្នុង\u200Bប្រទេស\u200Bកម្ពុជា\u200Bកាន់\u200Bតែ\u200Bមាន \u200Bភាព\u200Bរីក\u200Bចម្រើន\u200B\u200B\u200B \u200Bដោយ\u200Bបច្ចេកទេស\u200Bព័ត៍មាន\u200Bវិទ្យា\u200B។\u200B \u200BKhmer Academy\u200B \u200Bនិង\u200Bក្លាយ\u200Bជា\u200Bកម្មវិធី\u200Bដ៏\u200Bមាន\u200Bសក្តានុពល\u200B \u200Bដែលប្រមូល\u200B\u200Bនិង\u200B\u200B \u200Bចែក\u200Bចាយ\u200Bរាល់ចំនេះ\u200Bនៅ\u200Bលើ\u200Bប្រព័ន្ធ\u200Bអ៊ីនធឺណែត \u200B។\u200B</string>
    <!-- Close About Us -->

    <!-- Video Player Screen -->
    <string name="show_comment">បញ្ចេញមតិ</string>
    <!-- Close Video Player Screen -->


    <string name="spinner_title">Select Gender</string>
    <string name="videoPlayerToolbarTitle">មេរៀន</string>
    <string name="spinner_university_title">Select University</string>
    <string name="spinner_department_title">Select Department</string>

    <!--String Email Validator-->
    <string name="validation_valid_email">Please, enter valid email address</string>
    <string name="validation_empty">មិនអាចទទេ</string>
    <string name="validation_success">Validation succeeded! \nThat was easy, wasn\'t it?</string>

    <!--String comment-->
    <string name="first_fragment">Fragment 1</string>
    <string name="second_fragment">Fragment 2</string>
    <string name="static_fragment">Static fragment</string>
    <string name="to_second_fragment">Change to second fragment</string>
    <string name="to_static_fragment">Change to static fragment</string>
    <string name="internet_problem">បញ្ហាបណ្តាញអ៊ិនធឺណែត</string>

    <!--Facebook connection-->
    <string name="facebook_app_id">952178931544511</string>

    <!-- Google Map API Key -->
    <string name="google_map_API_KEY">AIzaSyC37rSNjWt1ChrV5xxhqPBd7zPln-S1MvI</string>

    <!--Language Changing-->
    <string name="language">ភាសា</string>
    <string name="lan_cancel">បោះបង់</string>

    <string name="khmer_lan">ភាសាខ្មែរ</string>
    <string name="english_lan">ភាសាអង់គ្លេស</string>
    <string name="nav_setting_lan">ការកំណត់ភាសា</string>
    <string name="chooseLan">សូមជ្រើសរើសភាសាដែលអ្នកពេញចិត្ត</string>

    <!--Slash Screen-->
    <string name="slash_screen">Khmer Academy ផ្តល់​ឲ្យ​អ្នក​នូវ​ការ​សិក្សា​ជាមួយ​ ​Tutorial​ ​ជា​ច្រើន​ភាសា​ ​Programming​។</string>
    <string name="copyright">រក្សាសិទ្ធិដោយ Khmer Academy ២០១៦</string>

    <!--Spot Dialoag-->
    <string name="spotDialog">កំពុង​ដំណើរការ...</string>
    <string name="succeedRegister">ចុះឈ្មោះដោយជោគជ័យ</string>

    <!--Spinner Drop down-->
    <string name="spGender">ភេទ:</string>
    <string name="male">ប្រុស</string>
    <string name="female">ស្រី</string>

    <!--Reply comments-->
    <string name="reply_comment">មតិឆ្លើយតប</string>
    <string name="reply">ឆ្លើយតប</string>
    <string name="comment">មតិ</string>
    <string name="yourComment">មតិរបស់អ្នក</string>
    <string name="select">សូមជ្រើសរើស</string>
    <string name="oldReply">មិនមានការឆ្លើយតបចាស់ៗទេ</string>
    <string name="oldcomment">មិនមានមតិចាស់ៗទេ</string>
    <string name="noReply">មិនមានការឆ្លើយតបទេ</string>
    <string name="nocomment">មិនមានមតិទេ</string>
    <string name="successReply">ឆ្លើយតបបានសំរេច</string>
    <string name="failReply">ឆ្លើយតបមិនបានសំរេច</string>
    <string name="no_old_comment">មិនមានមតិចាស់ៗទេ</string>
    <string name="no_comments">មិនមានមតិទេ</string>
    <string name="no_previous_reply_comments">មិនមានមតិឆ្លើយតបចាស់ៗទេ</string>
    <string name="no_replies">មិនមានការឆ្លើយតបទេ</string>
    <string name="your_comment">មតិរបស់អ្នក...</string>

    <!--Like/Unlike button-->
    <string name="unlike">ឈប់ចូលចិត្ត</string>
    <string name="like">ចូលចិត្ត</string>

    <!--Share button-->
    <string name="share">ចែករំលែក</string>

    <!--Search Playlist-->
    <string name="searchSub">ស្វែងរក Playlist...</string>
    <string name="noplaylist">មិនមាន Playlist ទេ</string>

    <!--Video Playlist-->
    <string name="noVideoList">មិនមានវីដេអូទេ</string>
    <string name="dialogshowing"></string>

    <!--Other-->
    <string name="contactUs">CONTACT US</string>
    <string name="verify_email">សូមពិនិត្យប្រអប់សាររបស់អ្នក</string>
    <string name="password_not_match">លេខសំងាត់មិនត្រូវគ្នា</string>
    <string name="login_failed">អ៊ីម៉ែល ឬ លេខសំងាត់មិនត្រឹមត្រូវ</string>
    <string name="choose">សូមជ្រើសរើស</string>
    <string name="delete">លុប</string>
    <string name="update">កែប្រែ</string>
    <string name="done">រួចរាល់</string>
    <string name="failed">បរាជ័យ</string>
    <string name="kshrd">មជ្ឈមណ្ឌល កូរ៉េ សហ្វវែរ អេច អ ឌី</string>

</resources>
