<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navItemHome" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_info"
            android:title="@string/navItemAboutUs" />
    </group>

    <item android:title="@string/itemAccount">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_action_user"
                android:title="@string/navItemUserProfile" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/navItemSetting"  />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/navItemLogout" />
        </menu>
    </item>
</menu>
