<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="#FDFDFD"
    android:layout_weight="10"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/khmer_academy_logo"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FF4D974E"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginBottom="10sp"
            android:text="@string/AppIntro_Eleaning"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FF969A9A"
            android:textSize="16sp"
            android:text="@string/AppIntro_Eleaning_content_3"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#FF4FA052"
        android:layout_weight="0.7"
        android:textStyle="bold"
        android:fontFamily="sans-serif-thin"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:onClick="StartLearning"
        android:text="@string/start_learning_today"/>

    <TextView
        android:layout_weight="2.3"
        android:layout_width="fill_parent"
        android:layout_height="0dp" />
</LinearLayout>